--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.21",
+    "react-scroll": "^1.8.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
